environments/demo/edge-config/active/argocd-vs-443.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: argo-vs
  namespace: gloo-system
spec:
  sslConfig:
    secretRef:
      name: upstream-tls
      namespace: gloo-system
  virtualHost:
    domains:
    #- 'argocd.glootest.com'
    #- 'argocd-local.glootest.com'
    - '*'
    routes:
      routeAction:
        single:
          upstream:
            name: argocd-argocd-server-443
            namespace: gloo-system
