environments/demo/edge-config/active/argocd-vs-80.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: argo-http-vs
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - argocd.example.com
    routes:
    - matchers:
      - prefix: /argo
      #options:
      #  prefixRewrite: /argo
      routeAction:
        single:
          upstream:
            name: argocd-argocd-server-80
            namespace: gloo-system
